# fingine

./: .gitignore  Cargo.toml  README.md
currency_utils/: Cargo.toml
currency_utils/src/: lib.rs
fingine/: Cargo.toml
income_tax_engine/: Cargo.toml
income_tax_engine/src/: lib.rs
registered_accounts/: Cargo.toml
registered_accounts/src/: lib.rs
simple_money/: Cargo.toml
simple_money/src/: currency.rs  lib.rs
tax_engine/: Cargo.toml
tax_engine/src/: lib.rs
taxes/: Cargo.toml
taxes/src/: lib.rs
