[package]
name = "currency_utils"
version = "0.1.0"
authors = ["Javed Nissar <javednissar@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusty-money = { git = "https://github.com/RestitutorOrbis/rusty_money", branch = "javed.account-for-reverse" }
rust_decimal = "1.9.0"
anyhow = "1.0.37"
thiserror = "1.0"
rust_decimal_macros = "1.9.0"