[package]
name = "income_tax_engine"
version = "0.1.0"
authors = ["Javed Nissar <javednissar@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust_decimal = "1.9.0"
rust_decimal_macros = "1.9.0"
simple_money = { path = "../simple_money" }
thiserror = "1.0"