[package]
name = "taxes"
version = "0.1.0"
authors = ["Javed Nissar <javednissar@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
maplit = "1.0.2"
rusty-money = { git = "https://github.com/RestitutorOrbis/rusty_money", branch = "javed.account-for-reverse" }
rust_decimal = "1.9.0"
currency_utils = { path = "../currency_utils" }